# aws-cdk-multiple-experiments

./: .gitignore  README.md  pyproject.toml
assets/: aws-cdk-multiple-experiments-cross-account-events-backups.excalidraw  aws-cdk-multiple-experiments-custom-resource-s3-folders.drawio  aws-codepipeline-multiple-sources.excalidraw  aws-event-driven-architectures-testing-strategies.excalidraw  aws-multiple-experiments-vpc-networking.excalidraw  aws-rds-bastion-host-architecture.excalidraw
cli/: create_users_bootcamp.sh  user_data_script.sh
cloud9_envs/: app.py  cdk.json
cloud9_envs/stacks/: cloud9_stack.py
codepipeline_2_sources/: README.md  cdk.json  package.json
codepipeline_2_sources/lib/: cdk-stack.ts
config_rules_demo/: app.py  cdk.json
config_rules_demo/stacks/: config_rules_stack.py
cross_account_event_notifications/: README.md
custom_resource_s3_folders/: README.md  app.py  cdk.json
deprecated_s3_cross_region/: app.py  cdk.json
ec2_asg/: README.md  app.py  cdk.json
event_driven_architecture_tests/: README.md
observability/: app.py  cdk.json
rds_bastion_host/: README.md  app.py  backend_stack.py  cdk.json
rekognition/: app.py  cdk.json
s3_cross_region_kms/: app.ts  package.json
s3_cross_region_replication_kms/: README.md  cdk.json
s3_kms_cross_account_role/: README.md
s3_objects_events/: app.py  cdk.json
s3_objects_upload/: app.py  cdk.json
ses_emails/: app.py  cdk.json
sns-lambda-ses/: cdk.json  package.json
sns_topic_organization_level/: app.py  cdk.json
vpc_networking/: README.md  app.py  cdk.json
(+86 files in other folders)
